--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,10 +16,18 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: install requirements
+      - name: install app requirements
         run: pip install -r requirements.txt
         shell: bash
+      
+      - name: install dash testing
+        run: python -m pip install dash\[testing]
+        shell: bash
 
+      - name: install pytest-mock
+        run: pip install pytest-mock
+        shell: bash
+        
       - name: run test
-        run: python -m unittest
+        run: pytest
         shell: bash
